add UserPublic model, for user response without credentials
