# backend/docs/swagger.json
@@ -239,7 +239,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Member"
+                            "$ref": "#/definitions/UserPublic"
                         }
                     }
                 }
@@ -269,7 +269,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Member"
+                            "$ref": "#/definitions/UserPublic"
                         }
                     }
                 }
@@ -385,23 +385,6 @@
                 }
             }
         },
-        "Member": {
-            "type": "object",
-            "properties": {
-                "firstName": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "lastName": {
-                    "type": "string"
-                },
-                "teamId": {
-                    "type": "string"
-                }
-            }
-        },
         "PenaltyEntry": {
             "type": "object",
             "properties": {
@@ -463,10 +446,24 @@
                 "members": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/User"
+                        "$ref": "#/definitions/TeamMember"
                     }
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "TeamMember": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "teamId": {
+                    "type": "string"
+                },
+                "userId": {
                     "type": "string"
                 }
             }
@@ -492,10 +489,24 @@
                         "$ref": "#/definitions/PenaltyEntry"
                     }
                 },
-                "teamId": {
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "UserPublic": {
+            "type": "object",
+            "properties": {
+                "firstName": {
                     "type": "string"
                 },
-                "username": {
+                "id": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "userName": {
                     "type": "string"
                 }
             }
