# backend/models/team.go
@@ -3,6 +3,6 @@ package models
 type Team struct {
 	Id      string `gorm:"primarykey"`
 	Name    string
-	Members []User `gorm:"foreignKey:TeamId"`
-	Laws    []Law  `gorm:"foreignKey:TeamId"`
+	Members []TeamMember `gorm:"foreignKey:TeamId"`
+	Laws    []Law        `gorm:"foreignKey:TeamId"`
 } //@name Team
